--- a/BPsellout.ipynb
+++ b/BPsellout.ipynb
@@ -1,20 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "024a63a4-4fda-488d-8552-dfd6100bc1db",
+   "cell_type": "markdown",
+   "id": "afe159e3-c4f0-4794-b2b1-bfd7620af59b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#Automatizacion de preparativos de Base Plana SellOut_D NUR SRL by: Nicolas Acha"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "82031dc5-6db2-435c-88c8-c057fb618913",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Librerias\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tabulate \n",
@@ -41,7 +42,7 @@
    "outputs": [],
    "source": [
     "#Test\n",
-    "bpl.head"
+    "#bpl.head"
    ]
   },
   {
@@ -63,7 +64,7 @@
    "outputs": [],
    "source": [
     "#Test 2\n",
-    "print(bp)"
+    "#print(bp)"
    ]
   },
   {
@@ -79,44 +80,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "49e1e979-2cc0-4a21-9bb9-c8e70b5f0da6",
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0       1.000\n",
-      "1       1.000\n",
-      "2       0.333\n",
-      "3       4.000\n",
-      "4       0.250\n",
-      "        ...  \n",
-      "1606    0.166\n",
-      "1607    0.166\n",
-      "1608    1.000\n",
-      "1609    1.000\n",
-      "1610    1.000\n",
-      "Name: Quantidade, Length: 1362, dtype: float64\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "df26a802-0b3e-4218-b6a7-90344ed518d1",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#Test 3\n",
-    "print(bp_1['Quantidade'])"
+    "#Copiado e insertar columna \"vendedor pedido\" y separar\n",
+    "copy_1 = bp_1['Vendedor Pedido']\n",
+    "bp_1.insert(loc = 5, column = 'Ven_Pedido', value=copy_1)\n",
+    "bp_1[['Cod Ven','Nombre Vendedor']] = bp_1['Ven_Pedido'].str.split('-', expand=True)   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df26a802-0b3e-4218-b6a7-90344ed518d1",
+   "id": "2c8cb945-840b-4b41-bae0-7ac6f35388a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Copiado e insertar columna \"produto\" y separar\n",
+    "copy_1 = bp_1['Produto']\n",
+    "bp_1.insert(loc = 5, column = 'Product', value=copy_1)\n",
+    "bp_1[['Cod Pro','Nombre Pro']] = bp_1['Product'].str.split('-', expand=True)  \n",
+    "\n",
+    "#Generar columna para calibre\n",
+    "copy_1 = bp_1['Produto']\n",
+    "bp_1.insert(loc = 5, column = 'Cal', value=copy_1)\n",
+    "bp_1[['Borrar','Calibre']] = bp_1['Product'].str.split('X', expand=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7afd7ac2-0b59-430b-b930-4336740e11d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copiado e insertar columna \"Grupo\" y separar\n",
+    "copy_1 = bp_1['Grupo']\n",
+    "bp_1.insert(loc = 5, column = 'Grup', value=copy_1)\n",
+    "bp_1[['Cod Gru','Nombre Gru']] = bp_1['Grup'].str.split('-', expand=True)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7949605-abd8-44fe-9e9f-0e8685c28231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copiado e insertar columna \"Litro\" y convertir a hectolitros\n",
+    "copy_1 = bp_1['Litro']\n",
+    "bp_1.insert(loc = 14, column = 'Hectos', value=copy_1/100)"
+   ]
   },
   {
    "cell_type": "code",
@@ -124,7 +140,183 @@
    "id": "21a9fab8-b013-4f9b-95d5-5f7acc54b330",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cols = bp_1.columns.tolist()\n",
+    "#cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "455c7ce6-0011-4194-83ad-8c2ca3abaccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Orden correcto del data frame\n",
+    "bp_1 = bp_1[['Distribuidora',\n",
+    " 'Data',\n",
+    " 'Cliente',\n",
+    " 'Rota',\n",
+    " 'Vendedor Pedido',\n",
+    "  'Cod Ven',\n",
+    " 'Nombre Vendedor',\n",
+    " 'Supervisor Pedido',\n",
+    " 'Vendedor Cadastro',\n",
+    " 'Supervisor Cadastro',\n",
+    " 'Cidade',\n",
+    " 'Tipo Operação',\n",
+    " 'Número nf',\n",
+    " 'Produto',\n",
+    "    'Cod Pro',\n",
+    " 'Nombre Pro',\n",
+    " 'Quantidade',\n",
+    " 'Litro',\n",
+    "'Hectos',\n",
+    " 'Caixa Física',\n",
+    " 'Condição',\n",
+    " 'Peso',\n",
+    " 'Valor Venda',\n",
+    " 'Valor Custo',\n",
+    " 'Tabela',\n",
+    " 'Grupo',\n",
+    " 'Cod Gru',\n",
+    " 'Nombre Gru',\n",
+    " 'Categoria',\n",
+    " 'Marca',\n",
+    " 'Tab.Venda',\n",
+    " 'Cluster',\n",
+    " 'Canal',\n",
+    " 'Prazo Médio',\n",
+    " 'CFOP',\n",
+    " 'Fantasia',\n",
+    " 'FisJur',\n",
+    " 'Embalagem',\n",
+    " 'EAN',\n",
+    " 'NCM',\n",
+    " 'CIA',\n",
+    " 'Un',\n",
+    " 'Mes&Ano',\n",
+    " 'Comissão',\n",
+    " 'Bairro',\n",
+    " 'Preço Venda',\n",
+    " 'Quantidade Devolvida',\n",
+    " 'Litro Devolvido',\n",
+    " 'Caixa Fisica Devolvida',\n",
+    " 'Valor Devolvido',\n",
+    " 'Meta Valor',\n",
+    " 'Meta Qtde',\n",
+    " 'Meta Cx.F',\n",
+    " 'Meta Cobertura',\n",
+    " 'Meta P.medio',\n",
+    " 'Vendedor 2',\n",
+    " 'Supervisor 2',\n",
+    " 'Rota 2',\n",
+    " 'Trimestre',\n",
+    " 'Data Pedido',\n",
+    " 'Caixa Genérica',\n",
+    " 'Caixa Genérica Devolvida',\n",
+    " 'Meta Caixa Genérica',\n",
+    " 'rMeta Caixa Genérica',\n",
+    " ' Registro',\n",
+    " 'Área',\n",
+    " ' Desconto Cli',\n",
+    " 'UF',\n",
+    " 'TO',\n",
+    " 'Mapa',\n",
+    " 'Endereço',\n",
+    " 'Mot.Devolucao',\n",
+    " ' Tipo Produto',\n",
+    " ' Transação',\n",
+    " 'Tipo Consumo',\n",
+    " 'Ano',\n",
+    " 'Ativo',\n",
+    " 'Compra',\n",
+    " 'Equipamentos',\n",
+    " 'GV. SUP',\n",
+    " 'Adf. Fin.',\n",
+    " 'Cob. Bol.',\n",
+    " 'Categoria Cia',\n",
+    " 'SubCategoria Cia',\n",
+    " 'Retornabilidade Cia',\n",
+    " 'Marca Cia',\n",
+    " 'Sabor',\n",
+    " 'Seguimento',\n",
+    " 'Ocasião Consumo',\n",
+    " 'Data NFe',\n",
+    " 'Cortado',\n",
+    " 'Eliminado',\n",
+    " 'Substituído',\n",
+    " 'Custo Última Entrada',\n",
+    " 'Data Devolução',\n",
+    " 'Dia Visita',\n",
+    " 'Promotor',\n",
+    " 'Promotor2',\n",
+    " 'Ação Comercial',\n",
+    " ' Polarizado/Escalonado','Calibre']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd3da8e-323d-458e-ae6b-84271ff8cfcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definir Columnas de codigos como valores int\n",
+    "bp_1['Cod Ven'] = bp_1['Cod Ven'].astype(int)\n",
+    "bp_1['Cod Pro'] = bp_1['Cod Pro'].astype(int)\n",
+    "bp_1['Cod Gru'] = bp_1['Cod Gru'].astype(int)\n",
+    "bp_1['Hectos'] = bp_1['Hectos'].astype(float)\n",
+    "bp_1['Quantidade'] = bp_1['Quantidade'].astype(float)\n",
+    "bp_1['Litro'] = bp_1['Litro'].astype(float)\n",
+    "bp_1['Caixa Física'] = bp_1['Caixa Física'].astype(float)\n",
+    "bp_1['Peso'] = bp_1['Peso'].astype(float)\n",
+    "bp_1['Valor Venda'] = bp_1['Valor Venda'].astype(float)\n",
+    "bp_1['Valor Custo'] = bp_1['Valor Custo'].astype(float)\n",
+    "bp_1['Tabela'] = bp_1['Tabela'].astype(float)\n",
+    "bp_1['Preço Venda'] = bp_1['Preço Venda'].astype(float)\n",
+    "bp_1['Número nf'] = bp_1['Número nf'].astype(int)\n",
+    "bp_1['CFOP'] = bp_1['CFOP'].astype(int)\n",
+    "bp_1['Embalagem'] = bp_1['Embalagem'].astype(int)\n",
+    "bp_1['Mapa'] = bp_1['Mapa'].astype(int)\n",
+    "bp_1[' Transação'] = bp_1[' Transação'].astype(int)\n",
+    "bp_1['Ano'] = bp_1['Ano'].astype(int)\n",
+    "bp_1['Adf. Fin.'] = bp_1['Cortado'].astype(int)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6f518e-8c4d-4214-b452-d9ad19370698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Copiar el data frame a papelera:\n",
+    "bp_1.to_clipboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adfa7c7e-4891-4224-852d-78c60fef9db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convertir en formato Excel:\n",
+    "bp_1.to_excel(r'C:\\Users\\Nicolas Acha\\Desktop\\Py/ Test.xlsx', index = False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e10e8f58-e5cf-490a-96ba-230c8a88b921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
